2001-11-05  Roland McGrath  <roland@frob.com>

	* sysdeps/powerpc/elf/sysdep.h: Remove this file, because it overrides
	the more-specific unix/sysv/linux/powerpc file and breaks everything.
	* sysdeps/powerpc/sysdep.h (ALIGNARG, ASM_TYPE_DIRECTIVE,
	ASM_SIZE_DIRECTIVE, CALL_MCOUNT, ENTRY, EALIGN, DO_CALL, JUMPTARGET,
	PSEUDO, PSEUDO_RET, PSEUDO_END, L, C_TEXT): These macros moved here
	here, put under [__ELF__].

2001-11-05  Ulrich Drepper  <drepper@redhat.com>

	* manual/charset.texi: Extensive editing work.
	* manual/nss.texi: Likewise.
	Changes by Dennis Grace <dgrace@us.ibm.com>.

2001-11-04  Roland McGrath  <roland@frob.com>

	* hurd/set-host.c (_hurd_set_host_config): Use O_WRONLY in flags
	parameter to dir_mkfile.

2001-11-02  Jakub Jelinek  <jakub@redhat.com>

	* string/bits/string2.h (__strndup): If n is smaller than len, set
	len to n + 1.
	* string/tester.c (test_strndup): New function.
	(main): Call it.

2001-11-01  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/rpc_main.c: Optimize variable definitions a bit.

	* sunrpc/Makefile (rpcgen-cmd): Use ../scripts/cpp in rpcgen calls.
	* scripts/cpp: New file.

	* elf/dl-load.c (_dl_map_object): Correct test of DF_1_NODEFLIB
	for rtld_search_dirs content.  Minor optimizations.

2001-10-31  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object): Make code a bit more compact by
	avoiding unnecessary duplication.

2001-10-31  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-load.c (_dl_map_object): If library was found using
	LD_LIBRARY_PATH, don't try RUNPATH list.

2001-10-31  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/register-dump (REGISTER_DUMP):
	Correct second argument of register_dump call.
	* sysdeps/unix/sysv/linux/s390/s390-64/register-dump (REGISTER_DUMP):
	Likewise.

2001-10-31  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/Makefile: Add support for IBM1132, IBM1133, and IBM1162
	modules.
	* iconvdata/TESTS: Likewise.